--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -18,16 +18,23 @@ header {
 
 .header-icon {
   font-size: 2rem;
+  margin: 0 5px;
   color: #2f8dff;
 }
 
 .navbar {
   background: #2f8dff;
-  padding: 15px;
-  transform: translateY(45px);
+  font-size: 1.25rem;
+  padding: 5px;
   z-index: 999;
 }
 
 .navbar a {
   color: white;
+}
+
+@media only screen and (min-width: 768px) {
+  .navbar {
+    border-radius: 5px;
+  }
 }
