--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,10 +1,51 @@
+#gatsby-focus-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.content-wrapper {
+  flex: 1 0 auto;
+}
+
+.homepage-container {
+  transform: translateY(-45px);
+}
+
 .landing {
   color: white;
   height: 500px;
+  text-align: center;
 
-  background-image: url("../images/coverphoto.jpg");
+  background: linear-gradient(
+      rgba(0, 0, 0, 0.25), 
+      rgba(0, 0, 0, 0.25)
+    ),
+    url("../images/coverphoto.jpg");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.jumbotron-content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.jumbotron-content h1 {
+  font-size: 3rem;
+  font-weight: bold;
+}
+
+.jumbotron-content p {
+  font-size: 1.5rem;
+  flex: 1 0 auto;
+}
+
+footer {
+  background: #2f8dff;
+  color: white;
+  padding: 15px;
+  text-align: center;
 }
