--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -43,6 +43,21 @@
   flex: 1 0 auto;
 }
 
+@keyframes wiggle {
+    0% { transform: rotate(0deg); }
+   25% { transform: rotate(5deg); }
+   75% { transform: rotate(-5deg); }
+  100% { transform: rotate(0deg); }
+}
+
+.wiggle {
+  animation: none;
+}
+
+.wiggle:hover {
+  animation: wiggle 0.5s infinite;
+}
+
 footer {
   background: #2f8dff;
   color: white;
