--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11,6 +11,11 @@
   transform: translateY(-45px);
 }
 
+.landing-section {
+  margin-top: 50px;
+  margin-bottom: 100px;
+}
+
 .landing {
   color: white;
   height: 500px;
