--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -48,15 +48,22 @@
   flex: 1 0 auto;
 }
 
+.jumbotron-content a {
+  width: fit-content;
+  margin: 0 auto;
+}
+
+.doggo {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 @keyframes wiggle {
     0% { transform: rotate(0deg); }
    25% { transform: rotate(5deg); }
    75% { transform: rotate(-5deg); }
   100% { transform: rotate(0deg); }
-}
-
-.wiggle {
-  animation: none;
 }
 
 .wiggle:hover {
@@ -68,4 +75,65 @@ footer {
   color: white;
   padding: 15px;
   text-align: center;
+}
+
+.thunder {
+  width: 100%;
+}
+
+.swal-icon.swal-icon--custom {
+  width: 250px;
+  margin: 0 auto;
+}
+
+.swal-button.swal-button--confirm:hover {
+  animation: wiggle 0.5s infinite;
+}
+
+.btn.btn-primary {
+  background-color: #2f8dff;
+  border-color: #2f8dff;
+}
+
+@keyframes fontalicious {
+  0% {
+    font-family: helvetica;
+  }
+  10% {
+    font-family: times;
+  }
+  20% {
+    font-family: fantasy;
+  }
+  30% {
+    font-family: monospace;
+  }
+  40% {
+    font-family: Palatino;
+  }
+  50% {
+    font-family: Tahoma;
+  }
+  60% {
+    font-family: impact;
+  }
+  70% {
+    font-family: cursive;
+  }
+  80% {
+    font-family: monospace;
+  }
+  90% {
+    font-family: fantasy;
+  }
+  99% {
+    font-family: futura;
+  }
+  100% {
+  }
+}
+
+.fontalicious {
+  animation-name: fontalicious;
+  animation-duration: 1s;
 }
