--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,99 +1,3 @@
-#gatsby-focus-wrapper {
-  display: flex;
-  flex-direction: column;
-}
-
-.content-wrapper {
-  flex: 1 0 auto;
-}
-
-.homepage-container {
-  transform: translateY(-45px);
-}
-
-.landing-section {
-  margin-top: 50px;
-  margin-bottom: 100px;
-}
-
-.landing {
-  color: white;
-  height: 500px;
-  text-align: center;
-
-  background: linear-gradient(
-      rgba(0, 0, 0, 0.25), 
-      rgba(0, 0, 0, 0.25)
-    ),
-    url("../images/coverphoto.jpg");
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.jumbotron-content {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.jumbotron-content h1 {
-  font-size: 3rem;
-  font-weight: bold;
-}
-
-.jumbotron-content p {
-  font-size: 1.5rem;
-  flex: 1 0 auto;
-}
-
-.jumbotron-content a {
-  width: fit-content;
-  margin: 0 auto;
-}
-
-.doggo {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-@keyframes wiggle {
-    0% { transform: rotate(0deg); }
-   25% { transform: rotate(5deg); }
-   75% { transform: rotate(-5deg); }
-  100% { transform: rotate(0deg); }
-}
-
-.wiggle:hover {
-  animation: wiggle 0.5s infinite;
-}
-
-footer {
-  background: #2f8dff;
-  color: white;
-  padding: 15px;
-  text-align: center;
-}
-
-.thunder {
-  width: 100%;
-}
-
-.swal-icon.swal-icon--custom {
-  width: 250px;
-  margin: 0 auto;
-}
-
-.swal-button.swal-button--confirm:hover {
-  animation: wiggle 0.5s infinite;
-}
-
-.btn.btn-primary {
-  background-color: #2f8dff;
-  border-color: #2f8dff;
-}
 
 @keyframes fontalicious {
   0% {
@@ -133,11 +37,118 @@ footer {
   }
 }
 
+@keyframes wiggle {
+    0% { transform: rotate(0deg); }
+   25% { transform: rotate(5deg); }
+   75% { transform: rotate(-5deg); }
+  100% { transform: rotate(0deg); }
+}
+
+.wiggle:hover {
+  animation: wiggle 0.5s infinite;
+}
+
 .fontalicious {
   animation-name: fontalicious;
   animation-duration: 1s;
 }
 
+.content-wrapper {
+  flex: 1 0 auto;
+}
+
+.homepage-container {
+  margin-top: -45px;
+}
+
+.landing-section {
+  margin-top: 50px;
+  margin-bottom: 100px;
+}
+
+.landing {
+  color: white;
+  height: 500px;
+  text-align: center;
+  background: linear-gradient(
+      rgba(0, 0, 0, 0.25), 
+      rgba(0, 0, 0, 0.25)
+    ),
+    url("../images/coverphoto.jpg");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.jumbotron-content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.jumbotron-content h1 {
+  font-size: 3rem;
+  font-weight: bold;
+}
+
+.jumbotron-content p {
+  font-size: 1.5rem;
+  flex: 1 0 auto;
+}
+
+.jumbotron-content a {
+  width: fit-content;
+  margin: 0 auto;
+}
+
+.action-buttons .wiggle {
+  margin: 5px;
+}
+
+.doggo {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.thunder {
+  width: 100%;
+}
+
+.swal-icon.swal-icon--custom {
+  width: 250px;
+  margin: 0 auto;
+}
+
+.swal-button.swal-button--confirm:hover {
+  animation: wiggle 0.5s infinite;
+}
+
+.btn.btn-primary {
+  background-color: #2f8dff;
+  border-color: #2f8dff;
+}
+
 .share-buttons > * {
   margin: 5px;
+}
+
+footer {
+  background: #2f8dff;
+  color: white;
+  padding: 15px;
+  text-align: center;
+}
+
+#gatsby-focus-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+@media only screen and (max-width: 768px) {
+  .jumbotron-content h1 {
+    font-size: 2.5rem;
+    font-weight: bold;
+  }
 }
